# raster-image-editor

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  demo  presentation.url
app/: brushSizeDialogWidget.cpp  fileIO.cpp  imageView.cpp  mainWindow.cpp  mainWindow.hpp  menuBar.cpp  newImageDialogWidget.cpp  raster_editor.cpp  resizeCanvasDialogWidget.cpp  sizeDialogWidget.cpp  statusBar.cpp
include/: brushSizeDialogWidget.hpp  fileIO.hpp  imageView.hpp  mainWindow.hpp  menuBar.hpp  newImageDialogWidget.hpp  resizeCanvasDialogWidget.hpp  sizeDialogWidget.hpp  statusBar.hpp
